Redo sniffing using GraphSON   By changing the "serializer" field in   gremlin-console/conf/remote.yaml to this:     serializer: { className: org.apache.tinkerpop.gremlin.driver.ser.GraphSONMessageSerializerV1d0 }